--- a/index.html
+++ b/index.html
@@ -200,6 +200,9 @@
         </div>
       </div>
     </section>
+    <footer>
+      Đây là Footer hieudz
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
