--- a/index.html
+++ b/index.html
@@ -201,6 +201,9 @@
       </div>
     </section>
 
+    <footer>
+      day la footer cua hai
+    </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
